# Computer_science_II

./: README.md  gnu_notes.txt  hi.cpp  linear_regression_gd.cpp
Practicas C++ II/Practicas C++ II/: A_C.cxx  io_fichero.cxx  jdp_func.cxx  jdp_punteros.cxx  misfunciones.cxx  pares_impares.cxx  suma_numeros.cxx
functions/: matrix.h
practices/all_functions/: computation_II.h
practices/all_functions2/: Diagonalization.cpp  computation_II.h  linear_equations.cpp  usefull_funcs.cpp
practices/exam1/: a.out  erf_error.txt  erf_table.txt
practices/exam2/: a.out  rk4_b0.txt  rk4_b1.txt  rk4_b2.txt  rk4_b3.txt  rk4_b4.txt
practices/practica10/: a.out  funcs.h  newton_non_linear  newton_non_linear.cpp
practices/practica11/: Jacobi_eigen.cpp  a.out  funcs.h  main.cpp
practices/practica12/: Jacobi_eigen.cpp  funcs.h  graph.gp  main.cpp  my_program.out  points.txt  run.sh
practices/practica13/: a.out  fit.gp  funcs.h  main.cpp  my_plot.gp  simp_data.txt  trap_data.txt
practices/practica14/: a.out  main  main.cpp  trap_data.txt
practices/practica15/: a.out  derivatives  funcs.h  graph2.gp  main.cpp  run.sh
practices/practica16/: a.out  derivada2.txt  derivada3.txt  derivatives  error.txt  functions.cpp  graph.gp  graph2.gp  linear_fit.gp  linear_fit1.gp  main.cpp  new.gp  new2.gp  run.sh
practices/practica17/: edos  euler_error.gp  euler_error0001.txt  euler_error0005.txt  euler_error001.txt  main.cpp  (+12 more)
python_files/: derivar_funcion.py
tests/: a.out  two_sum.cpp
tests/cpp_with_cmake_test/test2/: CMakeLists.txt  func_1.cpp  func_2.cpp  functions.h  main.cpp
(+365 files in other folders)
